--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>prueba-app</groupId>
-  <artifactId>app</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>47394785L</artifactId>
+  <version>2</version>
   <packaging>jar</packaging>
 
   <name>app</name>
@@ -22,7 +22,15 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+<profiles>
+<profile>
+<id>myPerfil</id>
+<activation>
+<os>
+<family>windows</family>
+</os>
 
+</activation>
     <build>
         <plugins>
             <plugin>
@@ -30,6 +38,16 @@
                 <artifactId>maven-jetty-plugin</artifactId>
                 <version>6.1.10</version>
             </plugin>
+			 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+				<configuration>
+				<verbose>true</verbose>
+				</configuration>
+            </plugin>
         </plugins>
     </build>
+	</profile>
+	</profiles>
 </project>
